Update padding on buttons, theme and social networks so all align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,6 @@ ol li {
 }
 
 .hintButton-container {
-    margin-bottom: 10px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -328,7 +327,7 @@ ol li {
     font-size: 36px;
     list-style-type: none;
     justify-content: space-evenly;
-    padding: 10px 20px 10px 20px;
+    padding: 20px 20px 10px 20px;
 }
 
 /* Created by & contact */
